--- a/web/index.html
+++ b/web/index.html
@@ -1,137 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
+  <meta charset="UTF-8">
     <title>Educa+ MATERA Systems</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-    <script src="../js/sweetalert.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/sweetalert.css">
+  
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>  
     <script src="../js/angular/angular.min.js"></script>
     <script src="../js/event-controller.js"></script>
-    <meta charset='utf-8' />
+  
+    <link rel="stylesheet" href="../css/style.css">
+
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+
+  
 </head>
-<body ng-app="matera" ng-controller="EventController" id="page">
-    <nav class="navbar navbar-dark bg-primary" style="box-shadow: 7px 7px 5px #c4c4c4;">
-      <a class="navbar-brand" href="#" ng-show="loggedUser">Área do Professor Educa+: {{loggedUser}}</a>
-      <a class="navbar-brand" href="#" ng-show="!loggedUser">Área do Professor Educa+</a>
-      <form class="navbar-form navbar-left">
-        <button id="authorize-button" style="display: none;">Entrar</button>
-        <button type="button" class="btn btn-danger" id="signout-button" style="display: none; box-shadow: 1px 1px 20px black;">Sair</button>
-      </form>
-    </nav>
 
-    <div class="card text-center">
-      <div class="card-header">
-        <ul class="nav nav-tabs card-header-tabs" ng-init="selected = 'all'">
-          <li class="nav-item"><a class="nav-link" ng-class="{'active':selected === 'all'}" href="#" ng-click="getAllEvents(); selected = 'all'">Todas as Aulas</a></li>
-          <li class="nav-item"><a class="nav-link" ng-class="{'active':selected === 'noTeacher'}" href="#" ng-click="getEventsWithNoTeacher(); selected = 'noTeacher'">Aulas Sem Professor</a></li>
-          <li class="nav-item"><a class="nav-link" ng-class="{'active':selected === 'my'}" href="#" ng-click="getMyEvents(); selected = 'my'">Minhas Aulas</a></li>
-          <li class="nav-item"><a class="nav-link" ng-class="{'active':selected === 'previous'}" href="#" ng-click="getPreviousClasses(); selected = 'previous'">Aulas Já Ministradas</a></li>
-        </ul>
-      </div>
-      <div class="card-block">
-        <div style="padding: 15px">
-          <div class="card" ng-repeat="event in events track by $index" style="box-shadow: 7px 7px 15px #c4c4c4; float: left; margin: 15px;">
-            <h5 class="card-header">Aula Educa+</h5>
-            <div class="card-body">
-                <h5 class="card-text">{{event.summary}}</h5>
-                <p class="card-text">Dia <b>{{!event.start.dateTime ? event.start.date : event.start.dateTime | date:'dd/MM/yyyy'}}</b> às <b>{{!event.start.dateTime ? event.start.date : event.start.dateTime | date:'HH:mm'}}h</b></p>
-                <a ng-click="eventDetails(event)" class="btn btn-info" data-toggle="eventDetailsModal" data-target="#eventDetailsModal" style="box-shadow: 5px 5px 7px #c4c4c4;">Informações</a>
-                <a ng-click="editDescription(event)" class="btn btn-info" data-toggle="editDescriptionModal" data-target="#editDescriptionModal" style="box-shadow: 5px 5px 7px #c4c4c4;">Editar Diário</a>
-            </div>
-            <div class="card-footer text-muted">
-              <span ng-show="event.teacher != null">Professor: {{event.teacher}}</span>
-              <b ng-show="event.teacher == null" style="color: red;">Sem Professor!</b>
-              <a href="#" ng-show="event.teacher == null" style="color: black;" ng-click="assignTeacher(event)" data-toggle="assignTeacherModal" data-target="#assignTeacherModal">(Alocar-me)</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+<body class="login">
 
-    <div class="modal fade" id="eventDetailsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel"><b>Informações da Aula Educa+</b></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <b>Quando?</b>
-            <p>{{!event.start.dateTime ? event.start.date : event.start.dateTime | date:'dd/MM/yyyy'}} às {{!event.start.dateTime ? event.start.date : event.start.dateTime | date:'HH:mm'}}h</p>
-            <b>Onde?</b>
-            <p><a href="#" ng-click="openInMap(event.location)">{{event.location}}</a></p>
-            <b ng-show="event.description">Diário do Professor:</b>
-            <p ng-show="event.description">{{event.description}} <a href="#" ng-click="editDescription(event)" data-dismiss="modal" style="font-size: 12px;">Editar</a></p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="modal fade" id="editDescriptionModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel"><b>Aula de {{!event.start.dateTime ? event.start.date : event.start.dateTime | date:'dd/MM/yyyy'}}</b></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="description"><b>Diário do Professor:</b></label>
-                <textarea class="form-control" id="description" rows="3" ng-model="event.description"></textarea>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" ng-click="confirmationEditDescription(event)">Salvar</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="login-form">
+  <center><img src="../img/original_600px.png" style="width: 90%; "></center>
+  
 
-    <div class="modal fade" id="assignTeacherModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel"><b>Tem certeza que deseja se alocar como professor?</b></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <center><b>Confira as informações abaixo</b></center>
-                <p></p>
-                <b>Local:</b>
-                <p>{{!event.start.dateTime ? event.start.date : event.start.dateTime | date:'dd/MM/yyyy'}} às {{!event.start.dateTime ? event.start.date : event.start.dateTime | date:'HH:mm'}}h</p>
-                <b>Localização:</b>
-                <p><a href="#" ng-click="openInMap(event.location)">{{event.location}}</a></p>
-                <b ng-show="event.description">Diário do Professor:</b>
-                <p ng-show="event.description">{{event.description}}</p>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" ng-click="confirmationAssignTeacher(event)">Me Alocar</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-          </div>
-        </div>
-      </div>
-    </div>
+     <h1 class="textoLogin">Educa+</h1>
+     <button id="authorize-button" type="button" class="log-btn" >Entrar</button>
+   </div>
 
-    <script type="text/javascript">
+
+ <script type="text/javascript">
         var CLIENT_ID = '319646018962-hufl8m8oojkt9umbr4j9escjfdi8vpkl.apps.googleusercontent.com';
         var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
         var SCOPES = "https://www.googleapis.com/auth/calendar";
@@ -155,18 +53,15 @@
               // Handle the initial sign-in state.
               updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
               authorizeButton.onclick = handleAuthClick;
-              signoutButton.onclick = handleSignoutClick;
           });
         }
 
         function updateSigninStatus(isSignedIn) {
           if (isSignedIn) {
               authorizeButton.style.display = 'none';
-              signoutButton.style.display = 'block';
-              angular.element(document.getElementById('page')).scope().start();
+              window.location.href = "home.html";
           } else {
               authorizeButton.style.display = 'block';
-              signoutButton.style.display = 'none';
           }
         }
 
@@ -174,15 +69,13 @@
           gapi.auth2.getAuthInstance().signIn();
         }
 
-        function handleSignoutClick(event) {
-          gapi.auth2.getAuthInstance().signOut();
-          angular.element(document.getElementById('page')).scope().signOut();
-        }
+      
     </script>
 
     <script async defer src="https://apis.google.com/js/api.js"
       onload="this.onload=function(){};handleClientLoad()"
       onreadystatechange="if (this.readyState === 'complete') this.onload()">
     </script>
+
 </body>
 </html>
