--- a/web/index.html
+++ b/web/index.html
@@ -3,79 +3,66 @@
 <head>
   <meta charset="UTF-8">
     <title>Educa+ MATERA Systems</title>
-  
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>  
     <script src="../js/angular/angular.min.js"></script>
     <script src="../js/event-controller.js"></script>
-  
     <link rel="stylesheet" href="../css/style.css">
-
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-
-  
 </head>
 
 <body class="login">
-
-
   <div class="login-form">
-  <center><img src="../img/original_600px.png" style="width: 90%; "></center>
-  
+    <center><img src="../img/matera.png" style="width: 90%;"></center>
+    <h1 class="textoLogin">Educa+</h1>
+    <button id="authorize-button" type="button" class="log-btn" >Entrar</button>
+  </div>
 
-     <h1 class="textoLogin">Educa+</h1>
-     <button id="authorize-button" type="button" class="log-btn" >Entrar</button>
-   </div>
+  <script type="text/javascript">
+      var CLIENT_ID = '319646018962-hufl8m8oojkt9umbr4j9escjfdi8vpkl.apps.googleusercontent.com';
+      var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
+      var SCOPES = "https://www.googleapis.com/auth/calendar";
 
+      var authorizeButton = document.getElementById('authorize-button');
+      var signoutButton = document.getElementById('signout-button');
+      var createButton = document.getElementById('create-button');
 
- <script type="text/javascript">
-        var CLIENT_ID = '319646018962-hufl8m8oojkt9umbr4j9escjfdi8vpkl.apps.googleusercontent.com';
-        var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
-        var SCOPES = "https://www.googleapis.com/auth/calendar";
+      function handleClientLoad() {
+        gapi.load('client:auth2', initClient);
+      }
 
-        var authorizeButton = document.getElementById('authorize-button');
-        var signoutButton = document.getElementById('signout-button');
-        var createButton = document.getElementById('create-button');
+      function initClient() {
+        gapi.client.init({
+            discoveryDocs: DISCOVERY_DOCS,
+            clientId: CLIENT_ID,
+            scope: SCOPES
+        }).then(function () {
+            // Listen for sign-in state changes.
+            gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
+            // Handle the initial sign-in state.
+            updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
+            authorizeButton.onclick = handleAuthClick;
+        });
+      }
 
-        function handleClientLoad() {
-          gapi.load('client:auth2', initClient);
+      function updateSigninStatus(isSignedIn) {
+        if (isSignedIn) {
+            authorizeButton.style.display = 'none';
+            window.location.href = "home.html";
+        } else {
+            authorizeButton.style.display = 'block';
         }
+      }
 
-        function initClient() {
-          gapi.client.init({
-              discoveryDocs: DISCOVERY_DOCS,
-              clientId: CLIENT_ID,
-              scope: SCOPES
-          }).then(function () {
-              // Listen for sign-in state changes.
-              gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
-              // Handle the initial sign-in state.
-              updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
-              authorizeButton.onclick = handleAuthClick;
-          });
-        }
+      function handleAuthClick(event) {
+        gapi.auth2.getAuthInstance().signIn();
+      }
+  </script>
 
-        function updateSigninStatus(isSignedIn) {
-          if (isSignedIn) {
-              authorizeButton.style.display = 'none';
-              window.location.href = "home.html";
-          } else {
-              authorizeButton.style.display = 'block';
-          }
-        }
-
-        function handleAuthClick(event) {
-          gapi.auth2.getAuthInstance().signIn();
-        }
-
-      
-    </script>
-
-    <script async defer src="https://apis.google.com/js/api.js"
-      onload="this.onload=function(){};handleClientLoad()"
-      onreadystatechange="if (this.readyState === 'complete') this.onload()">
-    </script>
-
+  <script async defer src="https://apis.google.com/js/api.js"
+    onload="this.onload=function(){};handleClientLoad()"
+    onreadystatechange="if (this.readyState === 'complete') this.onload()">
+  </script>
 </body>
 </html>
