--- a/web/index.html
+++ b/web/index.html
@@ -14,9 +14,9 @@
 
 <body class="login">
   <div class="login-form">
-    <center><img src="../img/matera.png" style="width: 90%;"></center>
-    <h1 class="textoLogin">Educa+</h1>
-    <button id="authorize-button" type="button" class="log-btn" >Entrar</button>
+    <center><img src="../img/educamais.png" style="width: 95%; margin-bottom: 20px;"></center>
+    <center><img src="../img/matera.png" style="width: 40%; margin-bottom: 40px;"></center>
+    <button id="authorize-button" type="button" class="log-btn">Entrar</button>
   </div>
 
   <script type="text/javascript">
