--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     <script src="../js/angular/angular.min.js"></script>
     <script src="../js/event-controller.js"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='../js/jquery.min.js'></script>
 </head>
 
 <body class="login">
